syntax = "proto3";

package main;

option go_package = "./proto";

// 添加部门信息表
message AddDeptReq {
  string create_by = 1; //创建者
  string dept_name = 2; //部门名称
  int32 dept_sort = 3; //部门排序
  int32 dept_status = 4; //部门状态
  string email = 5; //邮箱
  string leader = 6; //负责人
  int64 parent_id = 7; //上级机构ID，一级机构为0
  repeated int64 parent_ids = 8; //上级机构IDs，一级机构为0
  string phone = 9; //电话号码
  string remark = 10; //备注信息

}

message AddDeptResp {
  string pong = 1;
}

// 删除部门信息表
message DeleteDeptReq {
  repeated int64 ids = 1;
}

message DeleteDeptResp {
  string pong = 1;
}

// 更新部门信息表
message UpdateDeptReq {
  string dept_name = 1; //部门名称
  int32 dept_sort = 2; //部门排序
  int32 dept_status = 3; //部门状态
  string email = 4; //邮箱
  int64 id = 5; //编号
  string leader = 6; //负责人
  int64 parent_id = 7; //上级机构ID，一级机构为0
  repeated int64 parent_ids = 8; //上级机构IDs，一级机构为0
  string phone = 9; //电话号码
  string remark = 10; //备注信息
  string update_by = 11; //更新者

}

message UpdateDeptResp {
  string pong = 1;
}

// 更新部门信息表状态
message UpdateDeptStatusReq {
  int32 dept_status = 1; //部门状态
  repeated int64 ids = 2; //编号
  string update_by = 3; //更新者

}

message UpdateDeptStatusResp {
  string pong = 1;
}

// 查询部门信息表详情
message QueryDeptDetailReq {
  int64 id = 1;
}

message QueryDeptDetailResp {
  string create_by = 1; //创建者
  string create_time = 2; //创建时间
  string dept_name = 3; //部门名称
  int32 dept_sort = 4; //部门排序
  int32 dept_status = 5; //部门状态
  string email = 6; //邮箱
  int64 id = 7; //编号
  string leader = 9; //负责人
  int64 parent_id = 10; //上级机构ID，一级机构为0
  repeated int64 parent_ids = 11; //上级机构IDs，一级机构为0
  string phone = 12; //电话号码
  string remark = 13; //备注信息
  string update_by = 14; //更新者
  string update_time = 15; //更新时间

}

// 分页查询部门信息表列表
message QueryDeptListReq {

}

message DeptListData {
  string create_by = 1; //创建者
  string create_time = 2; //创建时间
  string dept_name = 3; //部门名称
  int32 dept_sort = 4; //部门排序
  int32 dept_status = 5; //部门状态
  string email = 6; //邮箱
  int64 id = 7; //编号
  string leader = 9; //负责人
  int64 parent_id = 10; //上级机构ID，一级机构为0
  repeated int64 parent_ids = 11; //上级机构IDs，一级机构为0
  string phone = 12; //电话号码
  string remark = 13; //备注信息
  string update_by = 14; //更新者
  string update_time = 15; //更新时间

}

message QueryDeptListResp {
  int64 total = 1;
  repeated  DeptListData list = 2;
}

// 部门信息表
service DeptService {
  // 添加部门信息表
  rpc AddDept(AddDeptReq) returns (AddDeptResp){}
  // 删除部门信息表
  rpc DeleteDept(DeleteDeptReq) returns (DeleteDeptResp){}
  // 更新部门信息表
  rpc UpdateDept(UpdateDeptReq) returns (UpdateDeptResp ){}
  // 更新部门信息表状态
  rpc UpdateDeptStatus(UpdateDeptStatusReq) returns (UpdateDeptStatusResp ){}
  // 查询部门信息表详情
  rpc QueryDeptDetail(QueryDeptDetailReq) returns (QueryDeptDetailResp){}
  // 查询部门信息表列表
  rpc QueryDeptList(QueryDeptListReq) returns (QueryDeptListResp){}


}
